[tool.poetry]
name = "ext-superset"
version = "0.0.1"
description = "`ext-superset` is a Meltano utility extension."
authors = ["Meltano Team"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^21.2.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.0"
click = "^8.1.3"
typer = "^0.6.1"
ext-airflow = {git = "https://github.com/meltano/ext-airflow.git", rev = "feat-init-extension"} # TODO: update before merge

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "ext_superset" }
    # uncomment this if you want to include static assets
    # { include = "files_ext-superset.*" }
]

# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_ext-superset/"
#include = [
#    "files_ext-superset/somefile.thing"
#]

[tool.poetry.scripts]
superset_extension = 'ext_superset.main:app'
superset_invoker = 'ext_superset.pass_through:pass_through_cli'
