[tool.poetry]
name = "superset-ext"
version = "0.0.1"
description = "`superset-ext` is a Meltano utility extension."
authors = ["Meltano Team and Contributors"]
maintainers = ["Meltano Team and Contributors"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
structlog = "^21.2.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk" = {git = "https://github.com/meltano/edk.git", rev = "v0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.6"
darglint = "^1.8.0"
flake8 = "^3.9.0"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.971"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "superset_ext"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = "tests"

[[tool.mypy.overrides]]
module = ["meltano.edk.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "superset_ext" }
    # uncomment this if you want to include static assets
    # { include = "files_superset-ext.*" }
]

# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_superset-ext/"
#include = [
#    "files_superset-ext/somefile.thing"
#]

[tool.poetry.scripts]
superset_extension = 'superset_ext.main:app'
superset_invoker = 'superset_ext.pass_through:pass_through_cli'
